<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Signup">

    <EditText
        android:id="@+id/edPasswordSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:ems="10"
        android:hint="@string/loginPasswordHint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        app:layout_constraintStart_toStartOf="@+id/edEmailSignup"
        app:layout_constraintTop_toBottomOf="@+id/edEmailSignup" />

    <EditText
        android:id="@+id/edPasswordRepeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:ems="10"
        android:hint="@string/repeatPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        app:layout_constraintStart_toStartOf="@+id/edPasswordSignup"
        app:layout_constraintTop_toBottomOf="@+id/edPasswordSignup" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/title"
        android:textColor="#673AB7"
        android:textSize="60sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLoginRedirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="93dp"
        android:text="@string/loginRedirect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginBottom="94dp"
        android:text="@string/Signup"
        app:layout_constraintBottom_toBottomOf="@+id/tvLoginRedirect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edPasswordRepeat" />

    <EditText
        android:id="@+id/edEmailSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="46dp"
        android:ems="10"
        android:hint="@string/loginEmailHint"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        tools:ignore="TextFields" />

</androidx.constraintlayout.widget.ConstraintLayout>